# Docs

./: .buildinfo  .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: load-manifest.py  main.yml
_sources/api/: content-management.md.txt  data-types.md.txt  index.md.txt  routes.md.txt
_sources/api/content-management/: add-user-pack.md.txt
_sources/conventions/: cmd-prefixing.md.txt  data-pack-menu.md.txt  index.md.txt  pack-ids.md.txt  tag-specification.md.txt  vanilla-overrides.md.txt
_sources/guides/: index.md.txt
_sources/libraries/: actionbar.md.txt  crafter.md.txt  custom-block.md.txt  enchanter.md.txt  index.md.txt  item.md.txt  prevent-aggression.md.txt
_sources/libraries/crafter/: function_tag.md.txt  shaped.md.txt
_sources/libraries/custom-block/: on_place.md.txt
_sources/libraries/title/: reset.md.txt
_sources/meta/: contributing.md.txt
_sources/weld/: index.md.txt
_sources/weld/merging/: condition.md.txt  index.md.txt  mcmeta.md.txt  priority.md.txt  rule.md.txt  source.md.txt
_static/: pygments.css
_static/css/: custom.css
api/: index.html
api/content-management/: index.html
api/content-management/add-user-pack/: index.html
api/content-management/delete-user-pack/: index.html
api/content-management/get-user-pack/: index.html
api/content-management/get-user-packs/: index.html
api/content-management/set-user-pack/: index.html
api/data-types/: index.html
api/routes/: index.html
conventions/: index.html
conventions/cmd-prefixing/: index.html
conventions/data-pack-menu/: index.html
conventions/namespacing/: index.html
conventions/pack-ids/: index.html
conventions/tag-specification/: index.html
conventions/vanilla-overrides/: index.html
docs/: index.md
docs/_static/css/: custom.css
docs/api/: data-types.md  index.md  routes.md
docs/api/content-management/: delete-user-pack.md  get-user-pack.md  get-user-packs.md  set-user-pack.md
docs/conventions/: cmd-prefixing.md  data-pack-menu.md  index.md  namespacing.md  pack-ids.md  tag-specification.md  vanilla-overrides.md
docs/guides/: index.md  yellow-shulker-box.md  yellow_shulker_box.md
docs/guides/tables/: 1.14-1.16.json  1.17.json  1.18-1.20.4.json  1.20.5.json
docs/launcher/: index.md
docs/libraries/: actionbar.md  beet.yaml  crafter.md  custom-block.md  damage.md  enchanter.md  index.md  item.md  prevent-aggression.md  title.md
docs/libraries/actionbar/: message.md
docs/libraries/actionbar/player/: on_click_locked_container.md
docs/libraries/crafter/: data_types.md  flags.md  function_tag.md  functions_tag.md  index.md  shaped.md
docs/libraries/custom-block/: on_place.md
docs/libraries/damage/entity/: apply.md  death_events.md  death_messages.md
docs/libraries/damage/entity/apply/: armor.md  explosion.md  projectile.md
docs/libraries/damage/player/: damage_events.md
docs/libraries/prevent-aggression/: team.md
docs/libraries/prevent_aggression/: team.md
docs/libraries/title/: message.md
docs/weld/: index.md
docs/weld/merging/: index.md  mcmeta.md  rule.md
genindex/: index.html
guides/: index.html
guides/yellow-shulker-box/: index.html
launcher/: index.html
libraries/: index.html
libraries/actionbar/: index.html
libraries/crafter/: index.html
libraries/crafter/data_types/: index.html
libraries/crafter/function_tag/: index.html
libraries/crafter/shaped/: index.html
libraries/custom-block/: index.html
libraries/custom-block/on_place/: index.html
libraries/damage/: index.html
libraries/enchanter/: index.html
libraries/item/: index.html
libraries/prevent-aggression/: index.html
libraries/prevent_aggression/team/: index.html
libraries/title/: index.html
libraries/title/message/: index.html
libraries/title/reset/: index.html
meta/contributing/: index.html
search/: index.html
weld/: index.html
weld/merging/: index.html
weld/merging/condition/: index.html
weld/merging/mcmeta/: index.html
weld/merging/priority/: index.html
weld/merging/rule/: index.html
weld/merging/source/: index.html
