[tool.poetry]
name = "smithed-docs"
version = "0.1.0"
description = "Smithed Docs"
authors = ["Smithed Council <team@smithed.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mudkip = "^0.8.0"
sphinx_design = "^0.3.0"
sphinx-pyproject = "^0.1.0"
smithed-libraries = "^0.7.3"
pygments= "^2.15.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
tomlkit = "^0.11.6"

[tool.mudkip]
base_url = "https://wiki.smithed.dev"
title = "smithed-docs"

[tool.mudkip.override]
html_title = "Smithed Documentation"
html_logo = "assets/icon.png"
html_favicon = "assets/favicon.ico"
html_theme = "furo"

extensions = ["sphinx_design", "sphinx.ext.autosectionlabel"]
myst_enable_extensions = ["substitution", "colon_fence"]

html_static_path = ["_static"]
html_css_files = [
    "css/custom.css",
    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
]

pygments_style = "zenburn"
pygments_dark_style = "material"
suppress_warnings = ["myst.header"]

exclude_patterns = ["libraries/actionbar/*", "libraries/damage/*", "libraries/prevent-aggression/*"]

[tool.mudkip.override.myst_substitutions]
actionbar_version = "0.4.1"
custom_block_version = "0.2.0"
crafter_addon_version = "0.2.0"
prevent_aggression_version = "0.2.0"
damage_version = "0.2.0"
crafter_version = "0.2.0"
item_version = "0.2.1"
enchanter_version = "0.1.0"

convention_header = """
::::{grid} 2 2 2 2
:class-container: sd-p-2 sd-pl-3 sd-outline-muted sd-border-1 sd-rounded-1 sd-outline-muted

:::{grid-item}
:columns: 10 2 2 2
**Summary**
:::
:::{grid-item}
:columns: 10
{{ summary }}
:::
:::{grid-item}
:columns: 10 2 2 2
**Required**
:::
:::{grid-item}
:columns: 10
{{ required }}
:::
:::{grid-item}
:columns: 10 2 2 2
**Example**
:::
:::{grid-item}
:columns: 10
{{ example }}
:::
::::
"""

[tool.mudkip.override.html_theme_options]
sidebar_hide_name = true
announcement = "<a href='/api'> New API docs! <a/>"

[tool.mudkip.override.html_theme_options.light_css_variables]
color-brand-primary = "#1b48c4"
color-brand-content = "#1b48c4"
font-stack = "Inconsolata, sans-serif"

[tool.mudkip.override.html_theme_options.dark_css_variables]
color-brand-primary = "#6b83c5"
color-brand-content = "#6b83c5"
font-stack = "Inconsolata, sans-serif"
# color-background-primary = "#282a2c"
# color-background-secondary = "#12121f"
# color-admonition-background = "#1b48c4"

[tool.poe.tasks]
dev = "mudkip develop"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
